--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="Theme.App.Splash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#FF9D46FF</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_joker</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_foodapp_splash</item>
         <item name="postSplashScreenTheme">@style/Theme.FoodApp</item>
     </style>
 </resources>
